Error Mitigation/MagiCoder/Data/javax_xml_transform_dom/javax_xml_transform_domOutputResult.txt
Sample: DOMResult_3
----------------------------------------------------------------
output:
./Data/javax_xml_transform_dom/javaFiles/DOMResult_3.java:9: error: cannot find symbol
        Document doc = DocumentBuilderFactory.newInstance().newDocumentBuilder().newDocument();
                       ^
  symbol:   variable DocumentBuilderFactory
  location: class DOMResult_3
1 error


================================================================

Sample: DOMResult_4
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "org.w3c.dom.Node.getOwnerDocument()" because the return value of "javax.xml.transform.dom.DOMResult.getNode()" is null
	at DOMResult_4.main(DOMResult_4.java:8)

================================================================

Sample: DOMResult_5
----------------------------------------------------------------
stdout:
System ID set successfully: http://www.example.com

================================================================

Sample: DOMSource_7
----------------------------------------------------------------
stdout:
#document

================================================================

Sample: DOMSource_10
----------------------------------------------------------------
stdout:
null

================================================================

